[gd_scene load_steps=19 format=3 uid="uid://8bdxswh8ihe0"]

[ext_resource type="Texture2D" uid="uid://bc8kvwax8cyhh" path="res://assets/sprites/cards/card_outline.png" id="1"]
[ext_resource type="Texture2D" uid="uid://c6nom5xnpss1o" path="res://assets/sprites/cards/card.png" id="2"]
[ext_resource type="Texture2D" uid="uid://c5bdbjedi8fa1" path="res://assets/sprites/cards/card_internal.png" id="3"]
[ext_resource type="Texture2D" uid="uid://cyqlaxwtqgk0u" path="res://assets/sprites/environments/diamond.png" id="4"]
[ext_resource type="PackedScene" path="res://combat/traits/Tappable.tscn" id="5"]
[ext_resource type="Script" uid="uid://cp3r80l1bms4g" path="res://actors/environments/Card.gd" id="6"]
[ext_resource type="PackedScene" path="res://combat/traits/Owned.tscn" id="7"]
[ext_resource type="Texture2D" uid="uid://bug5ogkx5m7ej" path="res://assets/sprites/cards/card_border.png" id="8"]
[ext_resource type="FontFile" uid="uid://cr1ufi8wpbpqp" path="res://assets/fonts/04b_19.ttf" id="9"]
[ext_resource type="Texture2D" uid="uid://bgnjsrkkmdbt7" path="res://assets/sprites/species/mantiacs.png" id="10"]
[ext_resource type="Texture2D" uid="uid://bcygna7ih04dt" path="res://assets/sprites/circle.png" id="11"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(120, 170)

[sub_resource type="RectangleShape2D" id="7"]
size = Vector2(180, 230)

[sub_resource type="FontFile" id="8"]
fallbacks = Array[Font]([ExtResource("9")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="11"]
fallbacks = Array[Font]([ExtResource("9")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="Animation" id="10"]
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ground/Front:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.6),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(0, -64), Vector2(0, -32), Vector2(0, -64)]
}

[sub_resource type="Animation" id="6"]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ground/Back:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(1e-05, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Ground/Front:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.15, 0.3),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(1e-05, 1), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Ground/Back:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [true, false, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Ground/Front:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [false, true, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Ground/Back:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -64)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Ground/Front:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -64)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Shadow:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(2, 2), Vector2(1e-05, 2), Vector2(2, 2)]
}

[sub_resource type="Animation" id="12"]
resource_name = "Stand"
length = 0.001
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ground/Back:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Ground/Front:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(-2),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Ground/Back:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Ground/Front:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Ground/Back:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(-2),
"update": 0,
"values": [Vector2(0, -64)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Ground/Front:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(-2),
"update": 0,
"values": [Vector2(0, -64)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Shadow:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(-2),
"update": 0,
"values": [Vector2(2, 2)]
}

[node name="Card" type="Area2D" groups=["Card", "card", "in_camera"]]
scale = Vector2(1.5, 1.5)
collision_layer = 0
collision_mask = 3
script = ExtResource("6")

[node name="Tappable" parent="." instance=ExtResource("5")]

[node name="Owned" parent="." instance=ExtResource("7")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -30)
shape = SubResource("1")

[node name="ExitArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitArea"]
modulate = Color(1, 0.188235, 0, 1)
position = Vector2(0, -30)
shape = SubResource("7")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.235294)
position = Vector2(0, 32)
scale = Vector2(2, 2)
z_index = -10
z_as_relative = false
texture = ExtResource("2")

[node name="Ground" type="Node2D" parent="."]
position = Vector2(0, 32)

[node name="Outline" type="Sprite2D" parent="Ground"]
visible = false
modulate = Color(0.72549, 0.72549, 0.72549, 1)
scale = Vector2(2, 2)
texture = ExtResource("1")

[node name="Front" type="Node2D" parent="Ground"]
visible = false
scale = Vector2(1e-05, 1)

[node name="Background" type="Sprite2D" parent="Ground/Front"]
unique_name_in_owner = true
scale = Vector2(2, 2)
texture = ExtResource("2")

[node name="Figure" type="Sprite2D" parent="Ground/Front"]
scale = Vector2(0.9, 0.9)
texture = ExtResource("4")

[node name="Character" type="Sprite2D" parent="Ground/Front"]
visible = false
scale = Vector2(0.75, 0.75)
texture = ExtResource("10")
region_enabled = true
region_rect = Rect2(6.01, 35, 352.27, 446.325)

[node name="Border" type="Sprite2D" parent="Ground/Front"]
unique_name_in_owner = true
visible = false
self_modulate = Color(0.917647, 0.917647, 0.917647, 1)
scale = Vector2(2, 2)
texture = ExtResource("8")

[node name="Circle" type="Sprite2D" parent="Ground/Front"]
visible = false
self_modulate = Color(0.917647, 0.917647, 0.917647, 1)
position = Vector2(80, -132)
scale = Vector2(0.7, 0.7)
texture = ExtResource("11")

[node name="TopLeft" type="Node2D" parent="Ground/Front"]
visible = false
position = Vector2(80, -134)

[node name="Monogram" type="Label" parent="Ground/Front/TopLeft"]
modulate = Color(0.0588235, 0.470588, 0.113725, 1)
self_modulate = Color(0.92, 0.92, 0.92, 1)
offset_left = -102.667
offset_top = -97.5
offset_right = 98.3333
offset_bottom = 102.5
theme_override_fonts/font = SubResource("8")
text = "M"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Wrapper" type="Node2D" parent="Ground/Front"]
position = Vector2(0, 234)

[node name="Monogram" type="RichTextLabel" parent="Ground/Front/Wrapper"]
visible = false
self_modulate = Color(0.92, 0.92, 0.92, 1)
offset_left = -202.0
offset_top = -24.0
offset_right = 202.0
offset_bottom = 176.0
theme_override_fonts/normal_font = SubResource("11")
bbcode_enabled = true

[node name="Back" type="Node2D" parent="Ground"]

[node name="Background" type="Sprite2D" parent="Ground/Back"]
modulate = Color(0.75, 0.615, 0.615, 1)
scale = Vector2(2, 2)
texture = ExtResource("2")

[node name="Internal" type="Sprite2D" parent="Ground/Back"]
modulate = Color(0.68, 0.5576, 0.5576, 1)
scale = Vector2(2, 2)
texture = ExtResource("3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Float = SubResource("10")
anims/Reveal = SubResource("6")
anims/Stand = SubResource("12")

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0

[connection signal="body_entered" from="." to="." method="_on_Card_body_entered"]
[connection signal="body_exited" from="ExitArea" to="." method="_on_ExitArea_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
